ok for the modif

--- a/app/assets/stylesheets/design_exhibitors/_index_design_exhibitors.scss
+++ b/app/assets/stylesheets/design_exhibitors/_index_design_exhibitors.scss
@@ -67,7 +67,7 @@
   font-size: 1.2rem;
 }
 
-@media only screen and (min-width:279px) and (max-width:766px) {
+@media only screen and (min-width:279px) and (max-width:480px) {
   .size {
     font-size: 1rem;
   }
@@ -96,7 +96,7 @@
 
   .stick {
     position: fixed;
-    top: 6.5%;
+    top: 5.8%;
     width: 100%;
   }
 
@@ -112,7 +112,7 @@
   }
 
   .pics_divs {
-    height: 300px;
+    height: 361px;
     width: 100%;
   }
 
@@ -121,7 +121,7 @@
   }
 }
 
-@media only screen and (min-width:767px) and (max-width: 1260px) {
+@media only screen and (min-width:481px) and (max-width: 1260px) {
   .pics {
     display: flex;
     flex-direction: column;
@@ -139,5 +139,10 @@
 
   .text {
     border-bottom: 1px solid black;
+  }
+
+  .pics_divs {
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 }
