--- a/app/assets/stylesheets/pages/art_fair.scss
+++ b/app/assets/stylesheets/pages/art_fair.scss
@@ -1,7 +1,7 @@
 .about_art {
   text-align: center;
   padding: 0 15vw;
-  height: 85vh;
+  height: 88vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -76,6 +76,7 @@ p:nth-of-type(3) {
 
   .about_art {
     margin-top: 7rem;
+    height: unset;
   }
 
   .tab_pro {
@@ -84,11 +85,5 @@ p:nth-of-type(3) {
 
   .coordinates-design {
     display: unset;
-  }
-
-  .pics_divs {
-    background-size: contain;
-    background-repeat: no-repeat;
-
   }
 }
