--- a/app/assets/stylesheets/pages/registration.scss
+++ b/app/assets/stylesheets/pages/registration.scss
@@ -93,6 +93,7 @@
 .button_sub {
   background-color: white;
   border-radius: 2px;
+  color: black;
 }
 
 @media only screen and (min-width:279px) and (max-width:1024px) {
