--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,8 +60,8 @@
       </div>
     </div>
   </section>
-  <section id="scripts">
+  <%# <section id="scripts">
     <script>window.jQuery || document.write('<script src="https://bienvenue.art/wp-content/themes/bienvenue/dist/static/vendor/jquery-3.1.1.min.js"><\/script>')</script>
    <script type="text/javascript" src="https://bienvenue.art/wp-content/themes/bienvenue/dist/js/main.js?v=1657211939&amp;ver=6.0" id="javascript-main-js"></script>
   </section>
-</section>
+</section> %>
