--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -74,10 +74,8 @@ body {
 }
 
 #main-container {
-  // overflow-y: visible;
-  // position: relative;
-  overflow: hidden;
-  margin: 0;
+  overflow-y: visible;
+  position: relative;
 }
 
 #bienvenue-svg {
