ok for the small reynaldo modif

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,14 +16,14 @@
           </li>
         <% end %>
     	  <li data-navbar-target="artfair">
-          <%= link_to 'Art Fair', art_fair_path %>
+          <%= link_to 'Bienvenue Art Fair', art_fair_path %>
         </li>
         <% if current_page?("/art-fair") || current_page?("/art-fair-programm") %>
           <li style="width: 57.1px">
           </li>
         <% end %>
     	  <li data-navbar-target="design">
-          <%= link_to 'Design', design_path %>
+          <%= link_to 'Bienvenue Design', design_path %>
         </li>
         <% if current_page?("/design") || current_page?("/design-programm") %>
           <li style="width: 57.1px">
