--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <a href="?lang=en">ENG</a>
   </div>
   <div>
-    BIENVENUE ART CONTEMPORAIN — PARIS —
+    BIENVENUE —
     <a href="https://instagram.com/instagram.com/bienvenue.art">
       <svg width="23px" height="23px" viewBox="3 1 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="smaller">
         <defs>
