--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<section id="main-container" data-controller="home">
+<section id="main-container" data-controller="home" data-home-target="container">
   <section id="intro">
     <div class="together">
       <svg id="bienvenue-svg" viewBox="0 0 55 539" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
