just changed about text

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@ body {
 
 .b_around,
 .mover {
-  width: 2vw;
+  width: 26px;
 }
 
 .b1 {
@@ -165,9 +165,8 @@ body {
 #email_art_two {
   text-decoration: underline;
 }
-
-.section_two {
-  margin-bottom: 4vw;
+.section_one {
+  width: 85%;
 }
 
 .logos {
