i18n works without home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,9 +41,8 @@
   <main class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text" id="about_link">
       <div class="section_one">
-        <p>BIENVENUE is an events platform which aims to offer an alternative fair viewing experience format, by connecting galleries, professionals and art industries with both collectors and amateurs in a way that rethinks the role of the fair under the terms of an open dialogue. <br><br>
-        In a spirit of decompartmentalization, BIENVENUE deploys its actions in the fields of Contemporary Art, Design, Applied and Decorative Arts. It's held five times a year, alternating its editions between design and contemporary art.
-        </p>
+        <p><%= t("hello") %></p>
+        <p><%= t("about") %></p>
       </div>
     </section>
   </main>
