added i18n column to DB

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,7 +54,8 @@
           <% end %>
         </div>
         <div class="margin_to_photo">
-          <%= simple_format(@partner.description) %>
+
+          <%= simple_format(@partner.description_en) %>
         </div>
       </div>
     </section>
