--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,7 +41,7 @@
   <main class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text" id="about_link">
       <div class="section_one">
-        <p><%= t("about") %></p>
+        <p><%= t("pages.home.about") %></p>
       </div>
     </section>
   </main>
@@ -54,8 +54,11 @@
           <% end %>
         </div>
         <div class="margin_to_photo">
-
-          <%= simple_format(@partner.description_en) %>
+          <% if params[:locale] == "en" || params[:locale].nil? %>
+            <%= simple_format(@partner.description_en) %>
+          <% else %>
+            <%= simple_format(@partner.description_fr) %>
+          <% end %>
         </div>
       </div>
     </section>
