--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,16 +9,14 @@
         </li>
         <li data-navbar-target="about">
           <% if current_page?(root_path) %>
-            <%= link_to "ABOUT", root_path(anchor: "about_link"), data: { action: "click->navbar#link", controller: "scroll-to", scrollToOffsetValue: "35" } %>
+            <%= link_to t("navbar.about"), root_path(anchor: "about_link"), data: { action: "click->navbar#link", controller: "scroll-to", scrollToOffsetValue: "35" } %>
           <% else %>
-            <%= link_to "ABOUT", root_path, data: { action: "click->navbar#link" } %>
+            <%= link_to t("navbar.about"), root_path, data: { action: "click->navbar#link" } %>
           <% end %>
-          <%# <a href="#about_link" data-action="click->navbar#link" data-controller="scroll-to" data-scroll-to-offset-value="35">ABOUT</a> %>
         </li>
         <% if current_page?(root_path) %>
           <li data-navbar-target="partners">
-            <%= link_to "PARTNERS", root_path(anchor: "partners_link"), data: { action: "click->navbar#link", controller: "scroll-to", scrollToOffsetValue: "140" } %>
-            <%# <a href="#partners_link" data-action="click->navbar#link" data-controller="scroll-to" data-scroll-to-offset-value="140">PARTNERS</a> %>
+            <%= link_to t("navbar.partner"), root_path(anchor: "partners_link"), data: { action: "click->navbar#link", controller: "scroll-to", scrollToOffsetValue: "140" } %>
           </li>
         <% end %>
     	  <li data-navbar-target="artfair">
@@ -40,7 +38,7 @@
           <%# <a href="#contact_link" data-action="click->navbar#link" data-controller="scroll-to" data-scroll-to-offset-value="300">CONTACT</a> %>
         </li>
         <li  data-navbar-target="registration">
-          <%= link_to "REGISTRATION", new_registration_path, class:"link" %>
+          <%= link_to t("navbar.registration"), new_registration_path, class:"link" %>
         </li>
       </ul>
     </nav>
@@ -49,17 +47,17 @@
         <ul class="navbar_down">
           <% if current_page?("/art-fair") %>
             <li>
-              <%= link_to "EXHIBITORS", art_fair_exhibitors_path, class:"link" %>
+              <%= link_to t("navbar.exhibitors"), art_fair_exhibitors_path, class:"link" %>
             </li>
             <li>
-              <%= link_to "PROGRAMM", "/art-fair-programm", class:"link" %>
+              <%= link_to t("navbar.programm"), "/art-fair-programm", class:"link" %>
             </li>
           <% else %>
             <li>
-              <%= link_to "EXHIBITORS", design_exhibitors_path, class:"link" %>
+              <%= link_to t("navbar.exhibitors"), design_exhibitors_path, class:"link" %>
             </li>
             <li>
-              <%= link_to "PROGRAMM", "/design-programm", class:"link" %>
+              <%= link_to t("navbar.programm"), "/design-programm", class:"link" %>
             </li>
           <% end %>
         </ul>
@@ -77,14 +75,14 @@
               <% if current_page?(root_path) %>
                 <a href="#about_link" data-action="click->navbar#link" data-controller="scroll-to" data-scroll-to-offset-value="300">ABOUT</a>
               <% else %>
-                <%= link_to "ABOUT", root_path, class: "link" %>
+                <%= link_to t("navbar.about"), root_path, class: "link" %>
               <% end %>
             </li>
             <li>
               <% if current_page?(root_path) %>
                 <a href="#partners_link" data-action="click->navbar#link" data-controller="scroll-to" data-scroll-to-offset-value="70">PARTNERS</a>
               <% else %>
-                <%= link_to "PARTNERS", root_path, class: "link" %>
+                <%= link_to t("navbar.partner"), root_path, class: "link" %>
               <% end %>
             </li>
             <li>
@@ -101,7 +99,7 @@
               <% end %>
             </li>
             <li>
-              <%= link_to "REGISTRATION", new_registration_path, class:"link" %>
+              <%= link_to t("navbar.registration"), new_registration_path, class:"link" %>
             </li>
           </ul>
         </div>
@@ -110,17 +108,17 @@
       <ul class="navbar_down down_border_tel">
         <% if current_page?("/art-fair") || current_page?("/art-fair-programm")%>
           <li>
-            <%= link_to "EXHIBITORS", art_fair_exhibitors_path, class:"link" %>
+            <%= link_to t("navbar.exhibitors"), art_fair_exhibitors_path, class:"link" %>
           </li>
           <li>
-            <%= link_to "PROGRAMM", "/art-fair-programm", class:"link" %>
+            <%= link_to t("navbar.programm"), "/art-fair-programm", class:"link" %>
           </li>
         <% elsif current_page?("/design") || current_page?("/design-programm") %>
           <li>
-            <%= link_to "EXHIBITORS", design_exhibitors_path, class:"link" %>
+            <%= link_to t("navbar.exhibitors"), design_exhibitors_path, class:"link" %>
           </li>
           <li>
-            <%= link_to "PROGRAMM", "/design-programm", class:"link" %>
+            <%= link_to t("navbar.programm"), "/design-programm", class:"link" %>
           </li>
         <% end %>
       </ul>
