--- a/app/views/design_exhibitors/index.html.erb
+++ b/app/views/design_exhibitors/index.html.erb
@@ -30,7 +30,11 @@
         </div>
       </div>
       <div class="text">
-        <%= simple_format(d_exhib.description) %>
+        <% if params[:locale] == "en" || params[:locale].nil? %>
+          <%= d_exhib.description_en.nil? ? simple_format(d_exhib.description_fr) : simple_format(d_exhib.description_en) %>
+        <% else %>
+          <%= d_exhib.description_fr.nil? ? simple_format(d_exhib.description_en) : simple_format(d_exhib.description_fr) %>
+        <% end %>
         <%= link_to d_exhib.url, "http://#{d_exhib.url}" %>
       </div>
     </div>
