--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -173,10 +173,16 @@ body {
   width: 4vw;
 }
 
+.mail_logo {
+  display: flex;
+  align-items: center;
+}
+
 .logos_lign {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  margin-bottom: 26px;
 }
 
 .insta {
@@ -247,6 +253,19 @@ body {
   .height_tel {
     height: 100vh;
   }
+
+  .margin_to_photo {
+    margin-left: unset;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .middle {
+    width: 90%;
+  }
+
 }
 
 @media only screen and (min-width:850px) and (max-width: 1100px) {
