--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -40,9 +40,9 @@
     <% unless current_page?(root_path) %>
       <nav class="main-nav">
         <ul class="navbar_down">
-          <% if current_page?("/art-fair") %>
+          <% if current_page?("/art-fair") || current_page?("/art-fair-exhibitors") || current_page?("/art-fair-programm") %>
             <li>
-              <%= link_to "EXHIBITORS", art_fair_exhibitors_path, class:"link" %>
+              <%= link_to "EXHIBITORS",  art_fair_exhibitors_path, class:"link" %>
             </li>
             <li>
               <%= link_to "PROGRAMM", "/art-fair-programm", class:"link" %>
@@ -60,7 +60,7 @@
     <% end %>
   </div>
   <div class="header nav_height" id="nav_tel">
-    <ul class="navbar-nav .main-nav <%= "stick_nav" unless current_page? (root_path) %> <%= "erase_lign" if current_page?(design_exhibitors_path) || current_page?(art_fair_exhibitors_path) %>">
+    <ul class="navbar-nav .main-nav <%= "stick_nav" unless current_page?(root_path) %> <%= "erase_lign" if current_page?(design_exhibitors_path) || current_page?(art_fair_exhibitors_path) %>">
       <li class="align_icon">
         <i data-navbar-target="cross" class="fa-solid fa-plus" style="font-size: 1.4em;"></i>
       </li>
