--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,12 +9,12 @@
         <% end %>
         <% if current_page?(root_path) %>
           <li data-navbar-target="about">
-            <%= link_to t("navbar.about"), "#about_link", data: { action: "click->navbar#link", controller: "scroll-to", scrollToOffsetValue: "35" } %>
+            <%= link_to t("navbar.about"), "#about_link", data: { action: "click->navbar#link", controller: "scroll-to", scroll_to_offset_value: "35" } %>
           </li>
         <% end %>
         <% if current_page?(root_path) %>
-          <li data-navbar-target="partners">
-            <%= link_to t("navbar.partner"), "#partners_link", data: { action: "click->navbar#link", controller: "scroll-to", scrollToOffsetValue: "140" } %>
+          <li>
+            <%= link_to t("navbar.partner"), "#partners_link", data: { action: "click->navbar#link", controller: "scroll-to", scroll_to_offset_value: "100" } %>
           </li>
         <% end %>
         <% unless current_page?(design_path) || current_page?(design_programm_path) %>
@@ -35,7 +35,7 @@
         <% end %>
         <% if current_page?(root_path) %>
           <li data-navbar-target="contact">
-            <%= link_to "CONTACT", "#contact_link", data: { action: "click->navbar#link", controller: "scroll-to", scrollToOffsetValue: "300" } %>
+            <%= link_to "CONTACT", "#contact_link", data: { action: "click->navbar#link", controller: "scroll-to", scroll_to_offset_value: "300" } %>
           </li>
         <% end %>
         <% if current_page?(root_path) %>
@@ -109,14 +109,14 @@
     </ul>
     <% unless current_page?(root_path) %>
       <ul class="navbar_down down_border_tel">
-        <% if current_page?("/art-fair") || current_page?("/art-fair-programm")%>
+        <% if request.original_url.include?("art-fair") %>
           <li>
             <%= link_to t("navbar.exhibitors"), art_fair_exhibitors_path, class:"link" %>
           </li>
           <li>
             <%= link_to t("navbar.programm"), "/art-fair-programm", class:"link" %>
           </li>
-        <% elsif current_page?("/design") || current_page?("/design-programm") %>
+        <% elsif request.original_url.include?("design") %>
           <li>
             <%= link_to t("navbar.exhibitors"), design_exhibitors_path, class:"link" %>
           </li>
