--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -73,7 +73,7 @@ a:active,
   }
 
   .nav_height {
-    height: 6vw;
+    height: 5.5rem;
   }
 
   #nav_tel {
@@ -138,10 +138,6 @@ a:active,
     width: 100%;
     background-color: #f4f4f4;
     z-index: 30;
-  }
-
-  .erase_lign {
-    border-bottom: unset;
   }
 
   .navbar-nav {
