--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,14 +38,16 @@
       <% b_number += 1 %>
     <% end %>
   </div>
-  <main class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
-    <section class="all_text" id="about_link">
+  <main class="skew-scroll"  id="about_link">
+    <section class="all_text">
       <div class="section_one">
-        <p><%= t("pages.home.about") %></p>
+        <p><%= t("pages.home.about_p_one") %></p>
+        <br>
+        <p><%= t("pages.home.about_p_two") %></p>
       </div>
     </section>
   </main>
-  <main class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
+  <main class="skew-scroll">
     <section class="all_text">
       <div class="partner_display" id="partners_link">
         <div class="display_photos">
