--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,6 +41,8 @@
   <main class="skew-scroll"  id="about_link">
     <section class="all_text">
       <div class="section_one">
+      <div class="dates-one"> BIENVENUE Design <%= image_tag "right-arrow.png", :class => "arrow" %> September 8 - 11, 2022</div>
+      <div class="dates-two"> BIENVENUE Art Fair <%= image_tag "right-arrow.png", :class => "arrow" %> October 20 - 23, 2022</div>
         <p><%= t("pages.home.about_p_one") %></p>
         <br>
         <p><%= t("pages.home.about_p_two") %></p>
