--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,8 +42,18 @@
     <section class="all_text">
       <div class="section_one">
         <% if params[:locale] == "en" || params[:locale].nil? %>
-          <div class="dates-one"> <%= simple_format(@about.expo_category_design_en) %> <%= image_tag "right-arrow.png", :class => "arrow" %> <%= simple_format(@about.date_design_en) %></div>
-          <div class="dates-two"> <%= simple_format(@about.expo_category_fair_en) %> <%= image_tag "right-arrow.png", :class => "arrow" %> <%= simple_format(@about.date_fair_en) %></div>
+          <div class="dates-one">
+            <%= simple_format(@about.expo_category_design_en, html_options = {class: "space"})%>
+            <%= image_tag "right-arrow.png", :class => "arrow space" %>
+            <%= image_tag "arrow_tel.png", :class => "arrow_tel space" %>
+            <%= simple_format(@about.date_design_en, html_options = {class: "space space_tel"}) %>
+          </div>
+          <div class="dates-two">
+            <%= simple_format(@about.expo_category_fair_en, html_options = {class: "space"}) %>
+            <%= image_tag "right-arrow.png", :class => "arrow space" %>
+            <%= image_tag "arrow_tel.png", :class => "arrow_tel space" %>
+            <%= simple_format(@about.date_fair_en, html_options = {class: "space space_tel"}) %></div>
+          </div>
           <p><%= simple_format(@about.first_description_en) %></p>
           <br>
           <p><%= simple_format(@about.second_description_en) %></p>
