--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -210,7 +210,8 @@ body {
 }
 
 .arrow {
-  width: 13px;
+  width: 22px;
+  display: block;
 }
 
 .dates-two {
@@ -218,8 +219,17 @@ body {
 }
 
 .dates-one, .dates-two {
-  text-align: center;
+  display: flex;
+  justify-content: center;
   font-size: larger;
+}
+
+.space {
+  margin: 0 0.5rem;
+}
+
+.arrow_tel {
+  display: none;
 }
 
 @media only screen and (min-width:279px) and (max-width:849px) {
@@ -282,6 +292,24 @@ body {
     width: 90%;
   }
 
+  .arrow_tel {
+    display: block;
+    width: 15px;
+    margin: 5px 50%;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+  .dates-one, .dates-two {
+    display: unset;
+    font-size: unset;
+  }
+
+  .space_tel {
+    margin-bottom: 2rem;
+  }
 }
 
 @media only screen and (min-width:850px) and (max-width: 1100px) {
