if pic present put

--- a/app/views/design_exhibitors/index.html.erb
+++ b/app/views/design_exhibitors/index.html.erb
@@ -18,6 +18,7 @@
         <%= simple_format(d_exhib.artist_name, class: "artist-#{artist_nb}") %>
       </div>
       <% artist_nb += 1 %>
+      <% if   d_exhib.photo.url.present?  %>
       <div class="flex_middle">
         <div class="pics">
           <% d_exhib.photos.each do |photo| %>
@@ -26,6 +27,7 @@
           <% end %>
         </div>
       </div>
+      <% end %>
       <div class="text">
         <% if params[:locale] == "en" || params[:locale].nil? %>
           <%= d_exhib.description_en.nil? ? simple_format(d_exhib.description_fr) : simple_format(d_exhib.description_en) %>
